- fix, wrong font url
- fix, set the top/left to 0 when using absolute/fixed position (has issue in firefox otherwise)
- fix, issue when closing the context menu on firefox
- add a css transition to the background-color of the 'homeBlock' class

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a:hover {
 
 @font-face {
     font-family: 'iec_symbols_unicoderegular';
-    src: url('fonts/Unicode_IEC_symbol.woff');
+    src: url('../fonts/Unicode_IEC_symbol.woff');
 }
 
 
@@ -335,6 +335,8 @@ a:hover {
 
 #PlayOverlay {
     position: absolute;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.6);
@@ -368,6 +370,8 @@ a:hover {
 
 #AcceptDialogOverlay {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -420,6 +424,7 @@ a:hover {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    transition: background-color 0.1s;
 }
 
 .homeBlock:hover {
